--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </div>
   
-    <script  src="js/index.js"></script>
+    <script  src="js/script.js"></script>
   
   </body>
   </html>
